# myProjects

./: README.md
chess/: CMakeLists.txt  bishop.cpp  bishop.h  gameboard.cpp  gameboard.h  gamelogic.cpp  gamelogic.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
